--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bbnv",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Library for initializing different Bitbox mainnet/testnet environments based on hostname (include demo/dev in domain name for testnet)",
-  "main": "index.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
@@ -12,6 +12,7 @@
   "files": [
     "lib"
   ],
+  "prepublish": "tsc",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devalbo/bbnv.git"
