--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bbnv",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Library for initializing different Bitbox mainnet/testnet environments based on hostname (include demo/dev in domain name for testnet)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
     "build": "tsc"
   },
   "files": [
-    "lib"
+    "dist"
   ],
   "prepublish": "tsc",
   "repository": {
